# ISRIS

./: .gitignore  README.md  isris.db  pyproject.toml  requirements.txt  verify_isris.py
reports/: 601899_20260518_150114.md  601899_20260518_164704.md  601899_20260519_015349.md  601899_20260519_020002.md  601899_20260519_020824.md  紫金矿业_20260518_143904.md
src/isris/: orchestrator.py
src/isris/analysis/: engine.py  prompts.py
src/isris/api/: main.py
src/isris/api/reports/: 601899_20260518_165309.md  601899_20260518_170254.md
src/isris/api/static/: app.js  index.html  style.css
src/isris/core/: database.py  db_models.py  models.py
src/isris/ingestion/: extractor.py  filings.py  manager.py  search.py  social.py
src/isris/reporting/: generator.py
