[project]
name = "isris"
version = "0.1.0"
description = "IntelliStock Risk Insight System - A hybrid financial risk analysis platform."
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "yfinance>=0.2.31",
    "pandas>=2.0.0",
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "duckduckgo-search>=6.0.0",
    "trafilatura>=1.6.0",
    "beautifulsoup4>=4.12.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
